--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 	/>
   <link rel="stylesheet" href="./css/style.css">
+  <script defer src="./js/app.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -55,8 +56,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/scott-semlitz/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://github.com/ssemlitz">GitHub</a>
     <p class="copyright">© 2022 Scott Semlitz.</p>
   </div>
 </body>
