--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 	rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 	/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/app.js"></script>
   <title>Document</title>
 </head>
 
 <body>
+
   <div class="landing-container">
-    <div>
-      <ul>
-        <li>About</li>
-        <li>Skills</li>
-        <li>Work</li>
-        <li>Resume</li>
-        <li>Contact</li> 
-      </ul>
-    </div>
+    <nav>
+      <div>Home</div>
+      <div>About</div>
+      <div>Skills</div>
+      <div>Work</div>
+      <div>Resume</div>
+      <div>Contact</div>
+    </nav>
+    
     <h1 class="animate__animated landing-text">I'm Scott.</h1>
     <h2 class="landing-text">a programmer.</h2>
   </div>
