functioning navbar and some navbar CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <div class="landing-container" id="landing-div">
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="#landing-div">Home</a></li>
         <li><a href="#about-div">About</a></li>
