reformat directory and container css

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
   </section>
   
   <section class="about-container page-container" id="about-div">
-    <div class="profile">
-      <h2 class="about-h2">Hello.</h2>
-      <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia possimus voluptate dignissimos facilis? Illo, veritatis ipsum explicabo quibusdam nulla doloribus sapiente minus vel, quam voluptate vitae, expedita corrupti ipsa blanditiis.</p>
+    <h2 class="about-h2">Hello.</h2>
+    <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia possimus voluptate dignissimos facilis? Illo, veritatis ipsum explicabo quibusdam nulla doloribus sapiente minus vel, quam voluptate vitae, expedita corrupti ipsa blanditiis.</p>
   </section>
     
   <section class="skills-container page-container" id="skills-div">
-    <h2>My Skills.</h2>
+    <h2 class="skills-h2">My Skills.</h2>
       <div class="skill-row">
         <h3>Coding</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quaerat est maiores repellendus repudiandae modi dolore fugit quam amet non optio porro aliquid, adipisci itaque ullam, reiciendis consequuntur similique laudantium?</p>
@@ -49,7 +48,7 @@
     </section>
 
   <section class="work-container page-container" id="work-div">
-    <h2>My Work</h2>
+    <h2 class="work-h2">My Work</h2>
     
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
       <div class="carousel-indicators">
@@ -93,7 +92,7 @@
   </section>
 
   <section class="resume-container page-container" id="resume-div">
-    <h2>Resume</h2>
+    <h2 class="resume=h2">Resume</h2>
   </section>
 
   <section class="contact-container">
