--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="navbar">
     <ul>
-      <li><a href="#landing-div"><img src="./Images/HairVolume.png" alt="" height="50" width="50"></a></li>
+      <li><a href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a></li>
       <li><a href="#landing-div">Home</a></li>
       <li><a href="#about-div">About</a></li>
       <li><a href="#skills-div">Skills</a></li>
