--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
-  <script defer src="./js/app.js"></script>
+  <script defer src="./js/app.js" type="module"></script>
   <title>Document</title>
 </head>
 
@@ -36,59 +36,20 @@
   
   <section class="about-container page-container" id="about-div">
     <h2 class="about-h2">Hello.</h2>
+    <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
     <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia possimus voluptate dignissimos facilis? Illo, veritatis ipsum explicabo quibusdam nulla doloribus sapiente minus vel, quam voluptate vitae, expedita corrupti ipsa blanditiis.</p>
   </section>
     
   <section class="skills-container page-container" id="skills-div">
     <h2 class="skills-h2">My Skills.</h2>
-      <div class="skill-row">
-        <h3>Coding</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quaerat est maiores repellendus repudiandae modi dolore fugit quam amet non optio porro aliquid, adipisci itaque ullam, reiciendis consequuntur similique laudantium?</p>
-      </div> 
+
     </section>
 
   <section class="work-container page-container" id="work-div">
     <h2 class="work-h2">My Work</h2>
+    <div id="card-container">
     
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
-
   </section>
 
   <section class="resume-container page-container" id="resume-div">
