add couple of projects to work-container

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
   <section class="skills-container page-container" id="skills-div">
     <h2 class="skills-h2">My Skills.</h2>
-
+    <!-- bootstrap popovers for logos -->
     </section>
 
   <section class="work-container page-container" id="work-div">
