reformat css and add css heading variable

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scott Semlitz Portfolio</title>
-  <link rel="icon" href="./Images/favicon.ico">
+  <link rel="icon" href="./assets/images/favicon.ico">
   <link
 	rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -35,9 +35,11 @@
   </section>
   
   <section class="about-container page-container" id="about-div">
-    <h2 class="about-h2">Hello.</h2>
     <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
+    <h2 class="about-h2">Hello.</h2>
+    <div class="about-info">
     <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia possimus voluptate dignissimos facilis? Illo, veritatis ipsum explicabo quibusdam nulla doloribus sapiente minus vel, quam voluptate vitae, expedita corrupti ipsa blanditiis.</p>
+    </div>
   </section>
     
   <section class="skills-container page-container" id="skills-div">
@@ -81,8 +83,6 @@
       </div>
       <a class="btn" href="mailto:scottsemlitz1@gmail.com">CONTACT ME</a>
     </div>
-    <a class="footer-link" href="https://www.linkedin.com/in/scott-semlitz/">LinkedIn</a>
-    <a class="footer-link" href="https://github.com/ssemlitz">GitHub</a>
     <p class="copyright">© 2022 Scott Semlitz.</p>
   </section>
 </body>
