change placeholder about me

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
     <h2 class="about-h2">Hello.</h2>
     <div class="about-info">
-    <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia possimus voluptate dignissimos facilis? Illo, veritatis ipsum explicabo quibusdam nulla doloribus sapiente minus vel, quam voluptate vitae, expedita corrupti ipsa blanditiis.</p>
+    <p class="about-p">My name is Scott, I'm an aspiring software engineer. I like to be creative, but CSS doesn't want me to be. Dealing with CSS is just as bad if not worse than stepping on a Lego. Oh yeah, I also enjoy comedy and soccer and I'm indifferent about horses. I'm a leo...for those of you that care. I like sunsets, long walks on the beach, and doggos. Doggos are the best. Now you know more about me...I will fix this eventually. </p>
     </div>
   </section>
     
