change body paragraph dark mode color

--- a/index.html
+++ b/index.html
@@ -20,48 +20,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <a href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" width="50" height="50"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-  
-  <!-- <nav class="navbar">
+
+  <nav class="navbar">
     <ul>
-      <li class="logo"><a href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a></li>
-      <li class="light-dark-btn"><button id="light-dark-button"></button></li>
+      <div class="navbar-logo-ltdrk">
+        <li class="logo"><a href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a></li>
+        <li class="light-dark-btn"><button id="light-dark-button"></button></li>
+      </div>
       <li><a href="#landing-div">Home</a></li>
       <li><a href="#about-div">About</a></li>
       <li><a href="#skills-div">Skills</a></li>
@@ -69,7 +34,7 @@
       <li><a href="#resume-div">Resume</a></li>
       <li><a href="#contact-div">Contact</a></li>
     </ul>
-  </nav> -->
+  </nav>
   
   <section class="landing-container page-container" id="landing-div">
     
@@ -81,7 +46,7 @@
     <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
     <h2 class="about-h2">Hello.</h2>
     <div class="about-info">
-    <p class="about-p">My name is Scott, I'm an aspiring software engineer. I like to be creative, but CSS doesn't want me to be. Dealing with CSS is just as bad if not worse than stepping on a Lego. Oh yeah, I also enjoy comedy and soccer and I'm indifferent about horses. I'm a leo...for those of you that care. I like sunsets, long walks on the beach, and doggos. Doggos are the best. Now you know more about me...I will fix this eventually. </p>
+    <p class="about-p body-text">My name is Scott, I'm an aspiring software engineer. I like to be creative, but CSS doesn't want me to be. Dealing with CSS is just as bad if not worse than stepping on a Lego. Oh yeah, I also enjoy comedy and soccer and I'm indifferent about horses. I'm a leo...for those of you that care. I like sunsets, long walks on the beach, and doggos. Doggos are the best. Now you know more about me...I will fix this eventually. </p>
     </div>
   </section>
     
@@ -110,7 +75,7 @@
     <div class="contact-me page-container" id="contact-div">
       <h2>Get In Touch</h2>
       <h3>If you would like to talk about anything, feel free to reach out!</h3>
-      <p class="contact-message">You can contact me using the links below.</p>
+      <p class="contact-message body-text">You can contact me using the links below.</p>
       <div>
         <a class="email-btn contact-btn" href="mailto:scottsemlitz1@gmail.com">Email Me</a>
         <a class="github-btn contact-btn" href="https://github.com/ssemlitz">Github</a>
