change nav bar logo to "a" tags

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 <body>
 
   <nav class="navbar">
-    <ul>
-      <div class="navbar-logo-ltdrk">
-        <li class="logo"><a href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a></li>
-        <li class="light-dark-btn"><button id="light-dark-button"></button></li>
-      </div>
+    <div class="navbar-logo-ltdrk">
+      <a class="logo" href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a>
+      <a href="#" class="light-dark-btn"><button id="light-dark-button"></a>
+
+    </div>
+    <ul class="nav-list">
       <li><a href="#landing-div">Home</a></li>
       <li><a href="#about-div">About</a></li>
       <li><a href="#skills-div">Skills</a></li>
@@ -82,7 +83,7 @@
         <a class="linkedIn-btn contact-btn" href="https://www.linkedin.com/in/scott-semlitz/">LinkedIn</a>
       </div>
     </div>
-    <p class="copyright">© 2022 Scott Semlitz.</p>
+    <p class="copyright body-text">© 2022 Scott Semlitz.</p>
   </section>
 </body>
 
