--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
     <div class="navbar-logo-ltdrk">
       <a class="logo" href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a>
       <a href="#" class="light-dark-btn"><button id="light-dark-button"></a>
-
     </div>
     <ul class="nav-list">
-      <li><a href="#landing-div">Home</a></li>
-      <li><a href="#about-div">About</a></li>
-      <li><a href="#skills-div">Skills</a></li>
-      <li><a href="#work-div">Work</a></li>
-      <li><a href="#resume-div">Resume</a></li>
-      <li><a href="#contact-div">Contact</a></li>
+      <li class="list-item"><a href="#landing-div">Home</a></li>
+      <li class="list-item"><a href="#about-div">About</a></li>
+      <li class="list-item"><a href="#skills-div">Skills</a></li>
+      <li class="list-item"><a href="#work-div">Work</a></li>
+      <li class="list-item"><a href="#resume-div">Resume</a></li>
+      <li class="list-item"><a href="#contact-div">Contact</a></li>
     </ul>
+    <div class="menu"></div>
+      <div class="menu-line"></div>
+      <div class="menu-line"></div>
+      <div class="menu-line"></div>
   </nav>
   
   <section class="landing-container page-container" id="landing-div">
