hidden copyright button

--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
         <a class="github-btn contact-btn" href="https://github.com/ssemlitz">Github</a>
         <a class="linkedIn-btn contact-btn" href="https://www.linkedin.com/in/scott-semlitz/">LinkedIn</a>
       </div>
+      <div class="hidden-contact-btns" id="hidden-contact-btns" hidden>
+        <a type="button" href="https://www.youtube.com/watch?v=B1CPE6WWsAQ&ab_channel=CutestPuppiesCity" class="hidden-btn contact-btn">Puppies</a>
+        <a type="button" href="https://www.youtube.com/watch?v=7o_rwJwqkDc&ab_channel=SaturdayNightLive" class="hidden-btn contact-btn">SNL</a>
+      </div>
     </div>
-    <p class="copyright body-text">© 2022 Scott Semlitz.</p>
+    <p class="copyright body-text"> <button class="copyright-btn" id="copyright-btn">©</button> 2022 Scott Semlitz.</p>
   </section>
 </body>
 
