media query logo size change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <nav class="navbar">
     <div class="navbar-logo-ltdrk">
-      <a class="logo" href="#landing-div"><img src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a>
+      <a class="logo" href="#landing-div"><img class="logo-img" src="./assets/images/hair-volume.png" alt="" height="50" width="50"></a>
       <a href="#" class="light-dark-btn"><button id="light-dark-button"></a>
     </div>
     <ul class="nav-list">
