change about me

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
     <h2 class="about-h2">Hello.</h2>
     <div class="about-info">
-    <p class="about-p body-text">My name is Scott, I'm an aspiring software engineer. I like to be creative, but CSS doesn't want me to be. Dealing with CSS is just as bad if not worse than stepping on a Lego. Oh yeah, I also enjoy comedy and soccer and I'm indifferent about horses. I'm a leo...for those of you that care. I like sunsets, long walks on the beach, and doggos. Doggos are the best. Now you know more about me...I will fix this eventually. </p>
+    <p class="about-p body-text">My name is Scott, I'm an aspiring software engineer from Canton, Georgia. I'm a graduate of the General Assembly Software Engineering Immersive. Below, you can find projects I've worked on, my resume, and ways to get in touch. Feel free to reach out! </p>
     </div>
   </section>
     
   <section class="skills-container page-container" id="skills-div">
-    <h2 class="skills-h2">My Skills.</h2>
+    <h2 class="skills-h2">My Skills</h2>
     <!-- bootstrap popovers for icons -->
     <div class="skill-icons">
       <svg class="skill-svg"  xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-filetype-html" viewBox="0 0 16 16">
