--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
     <h2 class="about-h2">Hello.</h2>
     <div class="about-info">
-    <p class="about-p body-text">My name is Scott, I'm an aspiring software engineer from Canton, Georgia. I'm a graduate of the General Assembly Software Engineering Immersive. Below, you can find projects I've worked on, my resume, and ways to get in touch. Feel free to reach out! </p>
+    <p class="about-p body-text">My name is Scott, I'm an aspiring software engineer from Canton, Georgia. I'm a graduate of the General Assembly Software Engineering Immersive. Below, you can find projects I've worked on and ways to get in touch. Feel free to reach out! </p>
     </div>
   </section>
     
