--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li class="list-item"><a href="#about-div">About</a></li>
       <li class="list-item"><a href="#work-div">Work</a></li>
       <li class="list-item"><a href="#contact-div">Contact</a></li>
-      <li class="list-item"><a id="resume-download-btn" href="./assets/SE Resume.pdf" target="_blank" download>Download CV</a></li>
+      <li class="list-item"><a id="resume-download-btn" href="./assets/sei-resume.pdf" target="_blank" download>Download CV</a></li>
       
     </ul>
     <div class="menu"></div>
@@ -46,7 +46,7 @@
     
     <h1 class="landing-h1 animate__animated landing-text">I'm Scott.</h1>
     <h3 class="landing-h2 landing-text">a programmer.</h3>
-    <a id="resume-download-btn-small" href="./assets/SE Resume.pdf" target="_blank" download>Download CV</a>
+    <a id="resume-download-btn-small" href="./assets/sei-resume.pdf" target="_blank" download>Download CV</a>
   </section>
   
   <section class="about-container page-container" id="about-div">
