update about me

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <img class="about-img" src="./assets/images/profile-picture-circle.png" alt="">
     <h2 class="about-h2">Hello.</h2>
     <div class="about-info">
-    <p class="about-p body-text">My name is Scott, I'm an aspiring software engineer from Canton, Georgia. I'm a graduate of the General Assembly Software Engineering Immersive. Below, you can find projects I've worked on and ways to get in touch. Feel free to reach out! </p>
+    <p class="about-p body-text">Hello, my name is Scott Semlitz, I'm a full-stack engineer with a background in communications and customer service. I'm skilled in both front-end and back-end development. I have experience working with modern languages, such as JavaScript and Python. I have used many frameworks, including React, Node.js, Express, and Bootstrap. In terms of databases, I have mainly worked with MongoDB and PostreSQL. 
+
+    From my experience in customer service and comedic writing, I understand the importance of empathy, creating positive relationships with clients, and collaborating to find creative solutions. One of my strengths is my ability to communicate technical concepts in a clear and understandable way. Feel free to reach out! </p>
     </div>
   </section>
     
